--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "css-loader": "^3.2.0",
     "file-loader": "^4.3.0",
     "style-loader": "^1.0.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
